lab1/Test/L1-A-4-72.cmm
float ;
struct {
  float L7mUn ;
}YiZN_qAA6dRkpco ( int i , float Tvx_I3 , int WM8yWSC_MROrqoy 
  [ 881542295 ] ) {
  if ( ov ( ! 16167680.1423439468 * OuckVgf6 / sr 
    - s2ugc9Uoz <= Xj2sIcBf7ojVVx == T6zdAkSQoAS0U < aBnlOyBmlI5Xf_Ho 
    , GnT4RhGVP ) [ - XnrLYhTOK ( oufYINrZ2 ) = xk2FniLsDKTE 
    ] = ! ! YHaqIErsQ / V0 * _FYsQdshhv * a1HMvrOy0aaGdXlhe 
    - meks9Ed < WPPdXSftI < w4_zG7wWfAsR9n4GVb < UfcJ2 
    > Q7pHIhK2zM > ysIdxC__yyh6lMi7sig < HrJYHnZRajqGHCO7M4dv 
    <= X && YiBmshUAb1aF || bNEdfB5zeZZMnrPbkZx || UyDf04kwCTcMNgdkRJ 
    ) {
  }else   if ( _JNG9qMFK )   if ( WdKCCfGILSj4 )   if 
    ( cPLgDQfGwvay90Ubi )   qmOv 




  if ( ! ! - OuoZ_h9fTsFcP0yetkD5 * - KOJFG0iR * - 
    uwv * ! _FeiG2nrM / Ae69hiE9lXf4tOkk9 ( ) . XWV - 
    1045111176 . atgTHLs3y && ! my3hU4dBc / YyYC_U - F8zwd8Uk5vmhCu13Zn 
    + AeoiiXCGwZAr3kv2D6im + ux + FatOsUrcqYo - TBcwr7tHfJvyLz67 
    <= LI >= E_i3KKsC != ze && VoYnTU8157sk ( i2gEe ) 
    <= nmaCpxJnUrpx > TETojOgmZ8l3VF || ! kwfdQqntdzjazTc 
    * V3fm / j7cMeqRcUjCw / mrd443yauunjQ / w2Whqh9GDANHp 
    + DHO2EfB8n1v - m_K7yx2ryAje16T != qBx == g7C == SY43dK3SC_RvYh 
    || - uKS22uUI != f != LtrQaP38a == qP3S_5ku < sENAL8 
    < dAq7wcc < q7mx && ohlbGohvVYxHHyn && Mvqfq6 )   if 
    ( t_HRcYVdTIhu )   B0pvh2B ;
else   hMnred4XgMDxCyXradj5 ;


{
    float XN ;
    struct {
    }R = lRRr ;
    float MsGxZ ;
  }}
struct EYWHwid_qnd7qkp dSIww ( ) {
  if ( O42EV ( iwJGkjoSd ( yRhdryBs ) . b2M0Wp2niVPh 
    * mNqybuie39 * KBaxcI * y3Nb / qAfXfK1VVWVw * A + 
    thFL >= NMf > rX2vXyhAqXPHhSl6aNB || fqueR_vCFucuuC_T_ 
    || eGZQ , CQaMZcCIzyOhZk ) = E6RA2LwR ( ) [ EHJyi 
    ] [ Yz7 ] [ XBulU2j ] = NEhT1l648 ) {
  }else   if ( xu8LAhA )   wY2wmekmvv ;


}
int float RbI ( ) {
{
    struct {
    }vSWPtzmZctkzQb [ 1563836099 ] = kmMdmv , qhW 
      ;
{
    }  }}
